fix(list): reset overflow so the scroll bars aren't always showing

--- a/src/app/connection-list/connection-list.component.scss
+++ b/src/app/connection-list/connection-list.component.scss
@@ -36,10 +36,6 @@ md-list-item .list-action {
   color: rgba(0, 0, 0, .5);
 }
 
-.lists {
-  overflow: scroll;
-}
-
 .fab {
   position: fixed;
   right: 15px;
